--- a/index.html
+++ b/index.html
@@ -29,7 +29,35 @@
                 <option value="Shopping">Shopping</option>
                 <option value="Weather">Weather</option>
             </select>
-            <button id="languageSwitch" class="language-switch">🔄 Show English First</button>
+            <select id="language1Select" class="language-select">
+                <option value="fr-FR">🇫🇷 French</option>
+                <option value="en-US">🇬🇧 English</option>
+                <option value="es-ES">🇪🇸 Spanish</option>
+                <option value="de-DE">🇩🇪 German</option>
+                <option value="it-IT">🇮🇹 Italian</option>
+                <option value="pt-PT">🇵🇹 Portuguese</option>
+                <option value="ru-RU">🇷🇺 Russian</option>
+                <option value="ja-JP">🇯🇵 Japanese</option>
+                <option value="zh-CN">🇨🇳 Chinese</option>
+                <option value="ko-KR">🇰🇷 Korean</option>
+                <option value="ar-SA">🇸🇦 Arabic</option>
+                <option value="hi-IN">🇮🇳 Hindi</option>
+            </select>
+            <select id="language2Select" class="language-select">
+                <option value="en-US">🇬🇧 English</option>
+                <option value="fr-FR">🇫🇷 French</option>
+                <option value="es-ES">🇪🇸 Spanish</option>
+                <option value="de-DE">🇩🇪 German</option>
+                <option value="it-IT">🇮🇹 Italian</option>
+                <option value="pt-PT">🇵🇹 Portuguese</option>
+                <option value="ru-RU">🇷🇺 Russian</option>
+                <option value="ja-JP">🇯🇵 Japanese</option>
+                <option value="zh-CN">🇨🇳 Chinese</option>
+                <option value="ko-KR">🇰🇷 Korean</option>
+                <option value="ar-SA">🇸🇦 Arabic</option>
+                <option value="hi-IN">🇮🇳 Hindi</option>
+            </select>
+            <button id="languageSwitch" class="language-switch">🔄 Swap Languages</button>
         </div>
 
         <div id="sentenceGrid" class="sentence-grid">
